CHANGES IN FLTK 1.1.5rc2

	- Documentation updates (STR #365, STR #399, STR #412)
	- Added search symbol to the search field of
	  Fl_Help_Dialog (STR #417)
	- Added two new symbols, @search and @FLTK, which can be
	  used in labels.
	- MacOS X: fixed NumLock mixup, added support for
	  FL_Menu and FL_Delete keys on external (PC) keyboards
	  (STR #445)
	- Fl_File_Icon::draw() did not support drawing of complex
	  polygons in icon descriptions (STR #???)
	- The configure script now offers options for JPEG, PNG,
	  and ZLIB libraries (STR #416)
	- The first menu item in a list would not go invisible 
	  (STR #406)
	- Fl_Text_Buffer::replace() now range checks its input
	  (STR #385)
	- FLTK now builds with the current release of MinGW (STR
	  #325, STR #401, STR #402)
	- FLTK now honors the numlock key state (STR #369)
	- The Fl_Text_Display widget did not redraw selections
	  when focus changed (STR #390)
	- The plastic background image is now less contrasty
	  (STR #394)
	- Fl_Scroll now uses a full redraw when the scheme is
	  set to plastic and the box type is a frame (STR #205)
	- Fl_Window::resize() did not work properly with KDE 3.2
	  (STR #356)
	- FLTK didn't delete font bitmaps when the last OpenGL
	  window was deleted, preventing future text from
	  displaying (STR #310)
	- FLUID didn't include a full initialization record for
	  the trailing NULL menu items (STR #375)
	- Fl_Browser::item_width() did not properly handle
	  format modifiers (STR #372)
	- Fl_Browser::item_height() did not handle columns
	  properly (STR #371)
	- Fl_Gl_Window's on WIN32 now prefer accelerated pixel
	  formats over generic formats (STR #382)
	- Fl_Window::resize() did not work on some systems if
	  the window was not shown (STR #373)
	- FLUID did not write the user_data type if the
	  user_data field was empty (STR #374)
	- The value(const Fl_Menu_Item*) method was not
	  implemented for Fl_Choice (STR #366)
        - Fl_Pack didn't draw child widget labels the same way